--- a/ananops-provider/ananops-provider-mdmc/src/main/resources/conf/liquibase.properties
+++ b/ananops-provider/ananops-provider-mdmc/src/main/resources/conf/liquibase.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ananops_mdmc?characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ananops-mdmc?characterEncoding=utf8&useSSL=false
 spring.datasource.username= root
 spring.datasource.password= 123456
