--- a/ananops-provider/ananops-provider-mdmc/pom.xml
+++ b/ananops-provider/ananops-provider-mdmc/pom.xml
@@ -35,16 +35,16 @@
             <groupId>com.ananops.provider.api</groupId>
             <artifactId>ananops-provider-tpc-api</artifactId>
         </dependency>
-        <dependency>
-            <groupId>io.github.swagger2markup</groupId>
-            <artifactId>swagger2markup</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.netzwerg</groupId>
-            <artifactId>paleo-core</artifactId>
-            <version>0.10.2</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.github.swagger2markup</groupId>-->
+            <!--<artifactId>swagger2markup</artifactId>-->
+            <!--<version>1.3.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>ch.netzwerg</groupId>-->
+            <!--<artifactId>paleo-core</artifactId>-->
+            <!--<version>0.10.2</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>io.vavr</groupId>
             <artifactId>vavr</artifactId>
@@ -108,11 +108,11 @@
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>io.github.swagger2markup</groupId>
-            <artifactId>swagger2markup</artifactId>
-            <version>1.3.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.github.swagger2markup</groupId>-->
+            <!--<artifactId>swagger2markup</artifactId>-->
+            <!--<version>1.3.1</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
