--- a/ananops-provider/ananops-provider-uac/src/main/resources/application.yml
+++ b/ananops-provider/ananops-provider-uac/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: @pom.artifactId@
   datasource:
     username: root
-    password: 123456
+    password: root123456
   redis:
     database: 0
     host: ananops-db-redis
